Name:               plugin-import-id
Version:            0.1
Cabal-Version:      >= 1.6
Synopsis:           GHC plugin experiments
Category:           plugin
Description: 
  GHC plugin experiments
Author:             Conal Elliott
Maintainer:         conal@conal.net
Copyright:          BSD3
Stability:          experimental
build-type:         Simple

Library
  hs-Source-Dirs:   src
  Include-Dirs:     src
  Build-Depends:    base<5, ghc >= 7.4
  Exposed-Modules:  
                    PluginImportId.Plugin

--   Other-Modules:    
--                     TestImportId

