Name:               plugin-import-id
Version:            0.1
Cabal-Version:      >= 1.6
Synopsis:           GHC plugin experiment
Category:           plugin
Description: 
  Experimenting with GHC plugins.
  Trying to make an qualified name for (later) use in generated Core code.
Author:             Conal Elliott
Maintainer:         conal@conal.net
Copyright:          BSD3
Stability:          experimental
build-type:         Simple

Library
  hs-Source-Dirs:   src
  Include-Dirs:     src
  Build-Depends:    base<5, ghc >= 7.4
  Exposed-Modules:  
                    PluginImportId.Plugin

--   Other-Modules:    
--                     TestImportId

